@@ -1,0 +1,403 @@
+##Sketch 1 2
+document()
+layout('A4',0)
+layer('Layer 6',1,1,0,0,(0,0,0))
+fp((0.707,0.587,0.431))
+le()
+lw(1)
+r(535.66,0,0,-731.595,33.2855,814.032)
+fp((0.646,0.537,0.394))
+le()
+lw(1)
+r(85.3264,0,0,-728.435,485.2,812.452)
+fp((0.556,0.462,0.339))
+le()
+lw(1)
+r(491.417,0,0,-102.708,77.5288,264.151)
+fp((0.424,0.352,0.259))
+le()
+lw(1)
+r(186.454,0,0,-730.015,218.159,814.032)
+fp((0.293,0.243,0.179))
+le()
+lw(1)
+Fn('Utopia-Bold')
+Fs(36)
+txt('made with sketch',(0.534272,-2.16468e-16,1.30858e-16,0.883797,226.279,95.7126))
+fp((0.535,0.444,0.326))
+le()
+lw(1)
+Fn('Utopia-Bold')
+Fs(36)
+txt('made with sketch ',(0.534272,-2.16468e-16,1.30858e-16,0.883797,224.195,99.1098))
+fp((0.424,0.352,0.259))
+le()
+lw(1)
+Fn('Utopia-Bold')
+Fs(36)
+txt('made with sketch',(0.534272,-2.16468e-16,1.30858e-16,0.883797,225.153,97.5434))
+fp((0,0,0))
+le()
+lw(1)
+Fn('Utopia-Regular')
+txt('by legalh',(6.66498e-16,0.558047,-0.558047,6.66498e-16,390.503,95.4151))
+layer('Layer 4',1,1,0,0,(0.061,0,1))
+B()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(55.7365,589.816,1)
+bc(39.9024,523.939,68.9673,464.254,85.1707,433.724,2)
+bc(101.374,403.194,96.6189,427.893,96.6189,427.893,2)
+bc(96.6189,427.893,87.9477,472.93,103.684,447.381,2)
+bc(119.42,421.831,99.9467,487.222,99.9467,487.222,2)
+bc(99.9467,487.222,106.36,507.541,123.688,455.847,2)
+bc(141.016,404.153,126.65,499.202,128.977,497.331,2)
+bc(131.304,495.459,135.589,483.417,136.33,492.337,2)
+bc(137.071,501.256,110.074,815.884,55.7365,589.816,1)
+bC()
+Bi(10)
+fp((0.707,0.587,0.431))
+le()
+lw(1)
+b()
+bs(128.942,622.65,2)
+bc(120.491,666.293,99.9375,706.171,80.2063,685.781,2)
+bc(60.475,665.392,52.3207,632.095,45.6344,607.539,0)
+bc(62.869,670.603,90.9954,706.095,106.782,656.11,2)
+bc(122.569,606.126,131.697,558.719,130.4,550.678,2)
+bc(129.103,542.637,133.079,502.286,136.666,508.281,2)
+bc(140.253,514.275,137.392,579.007,128.942,622.65,2)
+bC()
+B_()
+fp((0.535,0.444,0.326))
+le()
+lw(1)
+b()
+bs(171.222,287.574,2)
+bc(77.4592,518.769,84.4564,790.331,295.773,790.331,2)
+bc(507.089,790.331,526.681,683.908,456.709,493.08,2)
+bc(386.737,302.253,438.516,342.62,438.516,305.923,2)
+bc(438.516,269.225,424.522,265.556,390.935,260.051,2)
+bc(357.348,254.546,264.985,56.3796,171.222,287.574,2)
+bC()
+B()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(541.809,585.099,0)
+bc(541.809,585.099,536.22,445.592,514.427,415.815,2)
+bc(492.634,386.039,496.874,410.163,496.874,410.163,2)
+bc(496.874,410.163,504.605,454.156,482.878,429.246,2)
+bc(461.152,404.336,483.411,468.18,483.411,468.18,2)
+bc(483.411,468.18,470.346,488.072,449.65,437.61,2)
+bc(428.953,387.147,438.963,480.007,435.489,478.187,2)
+bc(432.015,476.367,426.795,464.614,424.385,473.337,2)
+bc(421.975,482.06,411.212,770.84,541.809,585.099,0)
+bC()
+Bi(10)
+fp((0.707,0.587,0.431))
+le()
+lw(1)
+b()
+bs(418.377,600.702,2)
+bc(425.945,643.332,453.432,682.23,487.856,662.211,2)
+bc(522.28,642.193,539.913,609.606,553.996,585.571,0)
+bc(517.728,647.298,467.777,682.117,449.317,633.319,2)
+bc(430.856,584.521,422.719,538.214,425.899,530.348,2)
+bc(429.079,522.481,428.233,483.05,421.662,488.926,2)
+bc(415.09,494.802,410.81,558.072,418.377,600.702,2)
+bC()
+B_()
+layer('Layer 1',1,1,0,0,(1,0,0))
+fp((0.961,0.871,0.702))
+le()
+lw(1)
+b()
+bs(250.351,741.347,2)
+bc(364.759,741.347,368.226,696.304,390.414,643.996,2)
+bc(412.602,591.688,402.894,598.953,418.149,552.458,2)
+bc(433.403,505.962,420.922,478.355,386.253,426.047,2)
+bc(351.584,373.739,377.933,359.209,389.027,328.697,2)
+bc(400.121,298.184,375.159,264.765,328.01,238.611,2)
+bc(280.86,212.457,214.296,199.38,196.268,231.346,2)
+bc(178.24,263.312,114.45,299.637,144.958,334.509,2)
+bc(175.467,369.38,147.732,446.389,147.732,456.56,2)
+bc(147.732,466.731,111.676,564.082,142.185,597.5,2)
+bc(172.693,630.919,135.944,741.347,250.351,741.347,2)
+bC()
+layer('Layer 5',1,1,0,0,(0.141,0.334,0.778))
+fp((1,0.939,0.818))
+le()
+lw(1)
+b()
+bs(158.251,490.108,0)
+bc(162.977,487.635,178.337,481.041,187.789,483.514,2)
+bc(197.241,485.986,218.509,470.325,206.693,467.028,2)
+bc(194.878,463.731,179.519,439.002,172.429,453.015,2)
+bc(165.34,467.028,145.254,481.041,158.251,490.108,0)
+bC()
+fp((0.879,0.753,0.586))
+le()
+lw(1)
+b()
+bs(415.728,501.021,0)
+bc(387.601,586.766,428.431,498.422,383.065,446.455,2)
+bc(337.699,394.488,363.104,354.214,359.474,330.829,2)
+bc(355.845,307.444,365.987,301.076,344.05,304.846,1)
+bc(298.684,312.641,398.489,272.366,311.386,237.289,0)
+bc(368.548,255.477,373.084,268.469,391.231,298.35,2)
+bc(409.377,328.231,384.879,346.419,384.879,380.198,2)
+bc(384.879,413.976,417.543,438.66,415.728,501.021,0)
+bC()
+fp((0.899,0.814,0.656))
+le()
+lw(1)
+b()
+bs(222.9,417.422,0)
+bc(252.922,442.704,243.441,387.4,251.342,390.56,2)
+bc(259.242,393.721,294.005,403.201,298.745,404.781,2)
+bc(303.486,406.361,306.646,412.682,294.005,433.223,2)
+bc(281.364,453.765,278.204,483.787,278.204,501.169,2)
+bc(278.204,518.55,281.364,553.312,286.105,567.534,2)
+bc(290.845,581.755,276.624,565.954,251.342,569.114,1)
+bc(240.619,570.454,219.938,582.479,216.658,573.827,2)
+bc(212.204,562.081,261.013,588.75,257.662,477.467,1)
+bc(256.122,426.313,216.579,430.063,222.9,417.422,0)
+bC()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(213.136,429.497,0)
+bc(213.136,429.497,202.888,414.577,212.168,406.589,2)
+bc(221.448,398.602,228.189,404.349,236.96,392.716,2)
+bc(245.732,381.083,263.177,389.05,271.273,393.864,2)
+bc(279.37,398.679,294.122,403.306,297.136,403.628,2)
+bc(300.151,403.949,314.87,418.987,287.454,440.661,0)
+bc(302.49,420.719,309.484,412.307,288.194,403.391,2)
+bc(266.904,394.475,256.288,388.501,234.582,399.232,2)
+bc(212.877,409.964,209.983,406.895,215.117,427.733,2)
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(145.461,569.904,0)
+bc(136.068,562.003,176.773,596.766,215.912,584.125,2)
+bc(255.052,571.484,258.183,566.744,312.195,583.335,2)
+bc(366.208,599.926,358.893,604.666,400.679,560.423,0)
+bc(365.829,588.075,358.198,606.247,294.792,573.064,2)
+bc(231.386,539.882,237.83,587.285,191.646,582.545,2)
+bc(145.461,577.804,145.461,569.904,145.461,569.904,0)
+bC()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(288.362,439.659,0)
+bc(298.561,430.132,312.066,417.965,312.172,403.89,2)
+bc(312.278,389.815,310.149,379.236,319.808,375.023,0)
+bc(313.076,382.37,313.873,386.547,313.873,401.976,2)
+bc(313.874,417.405,299.096,433.436,288.362,439.659,0)
+bC()
+fp((0.871,0.722,0.529))
+le()
+lw(1)
+b()
+bs(198.945,319.292,0)
+bc(198.945,319.292,238.205,292.908,263.021,295.814,2)
+bc(287.837,298.721,289.214,299.448,298.33,300.175,2)
+bc(307.446,300.901,307.872,313.099,322.822,321.536,0)
+bc(310.91,322.072,301.673,307.695,294.582,306.242,2)
+bc(287.492,304.788,286.783,303.352,252.507,305.232,2)
+bc(218.23,307.112,198.945,319.292,198.945,319.292,0)
+bC()
+fp((0.871,0.722,0.529))
+le()
+lw(1)
+b()
+bs(194.764,334.944,0)
+bc(194.764,334.944,212.649,353.801,227.281,355.372,2)
+bc(241.914,356.944,246.25,350.658,259.798,351.182,2)
+bc(273.347,351.706,270.637,358.515,291.231,351.182,2)
+bc(311.825,343.848,332.42,330.229,310.742,332.324,2)
+bc(289.064,334.42,264.676,337.563,244.082,336.515,2)
+bc(223.488,335.467,236.494,328.658,194.764,334.944,0)
+bC()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(192.529,344.014,2)
+bc(203.534,330.723,194.871,321.866,192.061,315.626,2)
+bc(189.251,309.387,195.807,312.298,196.744,324,2)
+bc(197.68,335.702,221.564,331.005,243.574,329.744,2)
+bc(265.584,328.483,247.788,338.597,278.696,334.305,2)
+bc(309.604,330.013,319.438,333.113,319.906,326.05,2)
+bc(320.374,318.987,329.74,320.035,322.248,343.405,2)
+bc(314.755,366.775,327.867,328.536,313.818,333.802,2)
+bc(299.769,339.068,267.925,334.696,248.725,337.132,2)
+bc(229.525,339.568,229.525,332.477,211.729,334.995,2)
+bc(193.934,337.512,181.524,357.306,192.529,344.014,2)
+bC()
+fp((0.804,0.667,0.49))
+le()
+lw(1)
+b()
+bs(214.411,350.635,0)
+bc(226.785,357.505,238.873,359.92,254.201,354.063,2)
+bc(269.528,348.205,274.801,357.386,276.582,357.633,2)
+bc(278.363,357.881,298.276,352.678,309.958,344.339,2)
+bc(321.641,336.001,286.876,354.083,279.199,352.02,2)
+bc(271.522,349.957,270.183,347.043,250.377,351.836,2)
+bc(230.571,356.629,206.879,346.219,214.411,350.635,0)
+bC()
+fp((0.961,0.871,0.702))
+le()
+lw(1)
+b()
+bs(212.043,342.953,0)
+bc(212.043,342.953,216.939,351.911,230.499,349.671,2)
+bc(244.058,347.432,236.525,349.671,241.045,346.088,2)
+bc(245.565,342.505,240.668,337.578,236.902,340.266,2)
+bc(233.135,342.953,211.289,331.308,212.043,342.953,0)
+bC()
+fp((0.961,0.961,0.863))
+le()
+lw(1)
+b()
+bs(283.768,320.62,0)
+bc(283.768,320.62,272.669,302.94,243.347,309.608,2)
+bc(214.026,316.277,230.264,310.525,220.639,318.582,2)
+bc(211.013,326.64,221.902,336.029,229.938,329.929,2)
+bc(237.975,323.828,286.014,344.458,283.768,320.62,0)
+bC()
+fp((0.961,0.961,0.863))
+le()
+lw(1)
+b()
+bs(235.938,406.396,2)
+bc(214.201,408.38,215.56,428.215,227.786,440.117,2)
+bc(240.013,452.018,237.296,475.821,238.655,489.706,2)
+bc(240.013,503.591,259.032,440.117,257.674,430.199,2)
+bc(256.315,420.281,257.674,404.412,235.938,406.396,2)
+bC()
+fp((1,0.906,0.73))
+le()
+lw(1)
+b()
+bs(226.901,701.472,1)
+bc(191.217,694.957,181.279,693.145,170.22,641.256,2)
+bc(159.16,589.367,148.1,588.086,199.943,591.93,2)
+bc(251.785,595.773,251.094,573.993,298.098,591.93,2)
+bc(345.101,609.866,319.871,718.448,226.901,701.472,1)
+bC()
+fp((0.961,0.961,0.863))
+le()
+lw(1)
+b()
+bs(353.506,600.971,0)
+bc(353.506,600.971,345.75,604.47,273.098,606.822,2)
+bc(200.446,609.175,201.547,598.056,181.332,606.048,2)
+bc(161.117,614.04,194.887,608.625,262.252,612.037,2)
+bc(329.618,615.448,299.248,608.063,360.644,601.453,2)
+fp((1,0.956,0.869))
+le()
+lw(1)
+b()
+bs(248.143,684.634,2)
+bc(201.352,685.611,193.892,690.499,183.042,656.613,2)
+bc(172.192,622.727,191.18,620.772,244.074,622.727,2)
+bc(296.969,624.682,348.508,640.321,332.232,659.871,2)
+bc(315.957,679.421,294.935,683.656,248.143,684.634,2)
+bC()
+fp((1,0.906,0.73))
+le()
+lw(1)
+b()
+bs(241.602,223.699,2)
+bc(210.534,222.794,205.581,218.273,198.376,249.619,2)
+bc(191.172,280.965,203.779,282.774,238.901,280.965,2)
+bc(274.022,279.157,308.242,264.689,297.436,246.605,2)
+bc(286.629,228.521,272.671,224.603,241.602,223.699,2)
+bC()
+fp((1,0.906,0.73))
+le()
+lw(1)
+b()
+bs(284.653,486.846,0)
+bc(293.359,484.017,320.954,477.422,334.768,485.137,2)
+bc(348.582,492.851,382.058,476.474,364.891,466.459,2)
+bc(347.723,456.445,343.222,402.048,325.165,424.865,2)
+bc(307.108,447.683,268.407,466.023,284.653,486.846,0)
+bC()
+fp((1,0.939,0.818))
+le()
+lw(1)
+b()
+bs(290.404,474.608,0)
+bc(296.678,472.305,316.563,466.934,326.517,473.216,2)
+bc(336.471,479.498,366.286,462.476,353.915,454.321,2)
+bc(341.545,446.167,332.608,405.558,319.597,424.138,2)
+bc(306.585,442.719,278.698,457.652,290.404,474.608,0)
+bC()
+fp((0.707,0.587,0.431))
+le()
+lw(1)
+b()
+bs(426.735,499.589,0)
+bc(426.735,499.589,403.033,449.025,387.232,420.583,2)
+bc(371.431,392.14,377.751,352.637,382.492,339.996,2)
+bc(387.232,327.355,417.254,298.913,368.271,264.151,2)
+bc(319.287,229.388,305.066,224.648,305.066,224.648,2)
+bc(305.066,224.648,395.133,284.692,390.392,300.493,2)
+bc(385.652,316.295,363.53,355.798,369.851,395.301,2)
+bc(376.171,434.804,390.392,426.903,426.735,499.589,0)
+bC()
+fp((1,0.956,0.869))
+le()
+lw(1)
+b()
+bs(227.529,274.665,2)
+bc(212.659,275.227,210.289,278.038,206.841,258.547,2)
+bc(203.393,239.055,209.427,237.93,226.236,239.055,2)
+bc(243.044,240.179,259.422,249.175,254.25,260.421,2)
+bc(249.078,271.666,242.398,274.103,227.529,274.665,2)
+bC()
+guidelayer('Guide Lines',0,0,0,1,(0,1,0.121))
+grid((0,0,20,20),0,(0.848,0,1),'Grid')
+layer('Layer 7',1,1,0,0,(0,0,0))
+fp((0.879,0.753,0.586))
+le()
+lw(1)
+e(48.9837,0,0,-41.8732,338.768,521.439)
+fp((1,0.956,0.869))
+le()
+lw(1)
+e(41.0831,0,0,-33.9726,331.386,517.218)
+fp((0.535,0.444,0.326))
+le()
+lw(1)
+e(17.3813,0,0,-16.5913,322.967,508.798)
+fp((0,0,0))
+le()
+lw(1)
+e(8.36854,0,0,-6.72016,321.694,508.257)
+fp((0.879,0.753,0.586))
+le()
+lw(1)
+e(44.2157,0,0,-39.503,192.905,521.71)
+fp((1,0.956,0.869))
+le()
+lw(1)
+e(39.2288,0,0,-32.7502,186.802,518.429)
+fp((0.535,0.444,0.326))
+le()
+lw(1)
+e(18.2855,0,0,-15.6521,180.273,508.294)
+fp((0,0,0))
+le()
+lw(1)
+e(8.80386,0,0,-6.33977,179.506,507.606)
