@@ -32,6 +32,8 @@ test.xwd image/x-xwindowdump ox
 2001_compression_overview.djvu image/vnd.djvu
 # Copied from https://bugs.launchpad.net/ubuntu/+source/shared-mime-info/+bug/91488 (150 first kB)
 test.kdc image/x-kodak-kdc
+# Copied from http://www.skencil.org/gallery.html
+bathead.sk image/x-skencil
 
 # Documents
 ooo-6.0.doc application/msword
