@@ -1,5 +1,13 @@
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in:
+	* tests/bathead.sk:
+	* tests/list: Add image/x-skencil mime-type for Skencil
+	files, with help from Tim Beaulen <tbscope@gmail.com>
+	(Closes: #16050)
+
+2008-06-11  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Fix build
 
 2008-06-11  Bastien Nocera  <hadess@hadess.net>
